Corrects some error handing and add dynamic drop down choices

--- a/examples/uopy_web/xdemo_uopy/XDEMO_UOPY_UV/&SAVEDLISTS&/&&S.US-L-LT04%Blouie.4
+++ b/examples/uopy_web/xdemo_uopy/XDEMO_UOPY_UV/&SAVEDLISTS&/&&S.US-L-LT04%Blouie.4
@@ -1,8 +1,3 @@
-AE VOC TESTRESULTS
-AE BP SC2
-AE DICT MEMBERS TOTAL_COST
-LIST DICT MEMBERS
-LIST DICT RENTAL_DETAILS
 AE DICT RENTAL_DETAILS TOTAL_COST
 AE BP SC2
 *CSC2
@@ -80,20 +75,25 @@ A[3~[3~
 LIST MEMBERS WITH LAST_NAME_SEARCH LIKE 'SMI...' LAST_NAME
 quit
 LOGIN
-LIST DICT MEMBERS
-AE DICT MEMBERS STATE_CODE
-LIST DICT MEMBERS
-AE DICT MEMBERS LAST_NAME_SEARCH
-LOGTO C:\UOPY_WEB\XDEMO_UOPY\XDEMO_UOPY_UV
+logto xdemo
 LOGIN
-LIST DICT MEMBERS
-AE DICT MEMBERS STATE_CODE
-LIST DICT MEMBERS
-logto xdemo_uopy_uv
+list bp
+LIST BP
+LIST PBP
+AE PBP TRACKER.dat
+LIST BP
+LIST PBP
+UPS
+LIST PBP
+AE BP UPS
+AE PBP UPS
+UPS
+LOGTO XDEMO_UOPY_UV
 LOGIN
+AE BP CHART_DATA_UV
+LISTU
+LISTUSER
+AE DICT MEMBERS STATE_CODE
+LIST MEMBERS STATE_CODE WITH ID = "0855"
 AE MEMBERS 0855
-LOGTO C:\UOPY_WEB\XDEMO_UOPY\XDEMO_UOPY_UV
-LOGIN
-LISTDICT MEMBERS
-LIST DICT MEMBERS
-QUIT
+quit
